fix top of page link and navbar link spacing

--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -13,3 +13,7 @@
   margin: 2px 8px;
   padding: 4px;
 }
+
+.tk {
+  margin-right: 128px;
+}
